--- a/.githup/workflows/test.yml
+++ b/.githup/workflows/test.yml
@@ -1,9 +1,10 @@
-name:first wf
-on:push
-jobs:
-   first-job:
-   runs-on: ubuntu
-  steps:
-   name: print message
-   run: echo "ghada"
+name: first wf
 
+on: push
+
+jobs:
+  first-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: print message
+        run: echo "ghada"
